# django_docker_based_template

./: .dockerignore  README.md  pyproject.toml
apps/users/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py
apps/users/api/: urls.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: __init__.py  user.py  user_reset_token.py
apps/utils/: mixins.py  models.py  pagination.py  permissions.py  schemas.py  tasks.py  utils.py  validators.py
apps/utils/middlewares/: set_language.py
compose/general/postgres/: Dockerfile
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile
config/: typing_extra.py  urls.py
config/settings/: base.py  local.py  production.py
