[project]
name = "django-docker-based-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "amqp==5.1.1",
    "celery==5.3.4",
    "django==4.2.16",
    "django-celery-beat==2.5.0",
    "django-celery-results==2.5.1",
    "django-cors-headers==3.13.0",
    "django-filter==23.3",
    "django-modeltranslation==0.18.7",
    "djangorestframework==3.14.0",
    "djangorestframework-simplejwt==5.2.2",
    "drf-spectacular==0.27.2",
    "flower==2.0.1",
    "pillow==11.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv==1.0.1",
    "redis==5.0.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar==4.4.6",
]
production = [
    "gunicorn==21.2.0",
]
