[project]
name = "django-docker-based-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "amqp==5.3.1",
    "celery==5.4.0",
    "django==5.1.6",
    "django-celery-beat==2.7.0",
    "django-celery-results==2.5.1",
    "django-cors-headers==4.7.0",
    "django-filter==25.1",
    "django-modeltranslation==0.19.12",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.4.0",
    "drf-spectacular==0.28.0",
    "flower==2.0.1",
    "pillow==11.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv==1.0.1",
    "redis==5.2.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar==5.0.1",
]
production = [
    "gunicorn==23.0.0",
]
