[project]
name = "django-docker-based-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "amqp==5.3.1",
    "celery==5.4.0",
    "django==5.1.6",
    # "django-stubs==5.1.3",
    "django-celery-beat==2.7.0",
    "django-celery-results==2.5.1",
    "django-cors-headers==4.7.0",
    "django-filter==25.1",
    "django-modeltranslation==0.19.12",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.4.0",
    "drf-spectacular==0.28.0",
    "flower==2.0.1",
    "pillow==11.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv==1.0.1",
    "redis==5.2.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar==5.0.1",
]
production = [
    "gunicorn==23.0.0",
]


# RUFF configurations
[tool.ruff]
line-length = 120
target-version = "py313"

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    "E4", "E7", "E9", "F", "W", "DJ008", "DJ012", "DJ013", "G", "PIE", "T", "PYI", "PT", "Q", "RSE", "RET", "SLF",
    "SLOT", "SIM", "ARG", "PTH", "TD", "ERA"
]
ignore = ["TD002", "TD003"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = [
    "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM",
    "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF",
    "SIM", "SLF", "TID", "TRY", "UP", "YTT", "F401"
]
unfixable = []
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "**/**/migrations/*"
]

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

